# TrOCR-demo

./: .gitignore  LICENSE  README.md  __init__.py  main_inference.py  main_train.py  main_train_resume.py  pyproject.toml
config/: inference_config.toml  train_config.toml
modules/: Inference.py  inference.py  trainer.py
modules/loader/: augmentation.py  dataset.py
modules/utils/: __init__.py  date_str.py  fix_seed.py  process_time.py
