[project]
name = "trocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "datasets>=4.1.1",
    "evaluate>=0.4.6",
    "jiwer>=4.0.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "protobuf>=6.32.1",
    "schedulefree>=1.4.1",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "toml>=0.10.2",
    "torch==2.8.0",
    "transformers>=4.56.2",
]


[tool.uv.sources]
torch = [
    { index = "torch-cu128" },
]

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
